# python-package-exercise-project-3-team-7

./: Pipfile  README.md  example.py  pyproject.toml  wujiPrintPig.py
.github/workflows/: build.yaml
src/: pig.py
src/piglatin/: __main__.py  pig.py  print_bubble.py
src/piglatinTeam7/: __main__.py
tests/: test_pig.py
