[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "piglatin"
description = "This is a PigLatin Translator served with cute pigs"
version = "1.0.0"
authors = [
  { name="team7", email="wc1629@nyu.edu" },
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["python", "package", "build", "tutorial"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/software-students-fall2022/python-package-exercise-project-3-team-7"
"Repository" = "https://github.com/software-students-fall2022/python-package-exercise-project-3-team-7.git"
"Bug Tracker" = "https://github.com/software-students-fall2022/python-package-exercise-project-3-team-7/issues"

[project.scripts]
pig = "pig.__main__:main"